<!--
  ~ Shares Analysis
  ~ Copyright (C) 2016  Adithya J
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<resources>
    <string name="app_name">Shares Analysis</string>

    <string name="activity_hello_headline">Hello.</string>
    <string name="activity_hello_subheading">We just need a few quick things before getting you started.</string>
    <string name="activity_hello_name">Name</string>
    <string name="activity_hello_target">Target % p.a.</string>
    <string name="activity_hello_bank_ROI">Bank rate of interest</string>
    <string name="activity_hello_hint_settings">You can change these in settings later.</string>
    <string name="activity_hello_button_start">GET STARTED</string>

    <string name="fragment_empty_text">No shares added yet. \n Add your first share here.</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
</resources>
