<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Shares Analysis
  ~ Copyright (C) 2016  Adithya J
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:id="@+id/activity_hello_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingTop="32dp"
            android:text="@string/activity_hello_headline"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/abc_text_size_display_1_material">

            <requestFocus />
        </TextView>

        <TextView
            android:id="@+id/activity_hello_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/activity_hello_subheading"
            android:textSize="@dimen/abc_text_size_subhead_material" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_hello_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_hello_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_hello_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_hello_target"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_hello_bank_ROI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_hello_bank_ROI"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/activity_hello_hint_settings"
            android:textStyle="bold" />

        <Button
            android:id="@+id/activity_hello_button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/activity_hello_button_start"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>